--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,2 @@
 python-telegram-bot==13.15
-requests
-beautifulsoup4
-googletrans==4.0.0rc1
-chardet
-arabic-reshaper
-python-bidi
-PyPDF2
-python-docx
-python-pptx
+pdfcrowd
