--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-python-telegram-bot==22.0
-groupdocs-translation-cloud==25.2.0
-oauthlib== 3.2.2
-requests-oauthlib==2.0.0
+python-telegram-bot==13.15
+groupdocs-translation-cloud
+
