--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 python-telegram-bot==13.15
-groupdocs-translation-cloud
+groupdocs-translation-cloud==24.12.1
 requests
 oauthlib
 requests-oauthlib
