--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-python-pptx 
-python-telegram-bot 
-deepseek-api
+python-telegram-bot==13.15 
+python-pptx
+googletrans==4.0.0-rc1
+arabic-reshaper 
+python-bidi
