--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-telegram-bot==13.15 
+python-telegram-bot 
+requests 
+PyPDF2 
+python-docx 
 python-pptx
-googletrans==4.0.0-rc1
-arabic-reshaper 
-python-bidi
