--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-python-telegram-bot==20.0
+python-telegram-bot==13.15
 requests 
 pdf2docx 
 groupdocs-translation-cloud 
+groupdocs-storage-cloud
 oauthlib 
 requests-oauthlib
+
