--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-python-telegram-bot
-pyreverso
-pymupdf
-fpdf
-reverso-api
+python-telegram-bot==13.15
+python-docx 
+python-pptx 
+googletrans==4.0.0-rc1
