--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+python-telegram-bot==13.15
+python-docx 
+python-pptx 
 googletrans==4.0.0-rc1
-python-docx==0.8.11
-python-pptx==0.6.21
-arabic-reshaper==3.0.0
-python-bidi==0.4.2
-python-telegram-bot==13.7
+arabic_reshaper
+python-bidi
 convertapi==1.5.0
