--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-groupdocs_translation_cloud
-requests
-oauthlib
-requests_oauthlib
+python-telegram-bot==13.15
+pillow
+pytesseract
+googletrans==4.0.0-rc1
